--- a/package.json
+++ b/package.json
@@ -48,14 +48,15 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
-    "konva": "^1.3.0",
-    "material-ui": "^0.16.7",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "auth0-lock": "10.11.0",
+    "konva": "1.3.0",
+    "material-ui": "0.16.7",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
     "react-konva": "1.1.6",
-    "react-router": "^3.0.2",
-    "react-tap-event-plugin": "^2.0.1",
-    "styled-components": "^1.4.2"
+    "react-router": "3.0.2",
+    "react-tap-event-plugin": "2.0.1",
+    "styled-components": "1.4.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
